--- a/molly/molly/apps/places/templates/places/entity_detail.html
+++ b/molly/molly/apps/places/templates/places/entity_detail.html
@@ -5,32 +5,30 @@
 
 {% block content %}
 
-
-<div class="section">
-  {% include "places/metadata/real_time_information.html" %}
-  {% include "places/metadata/ldb.html" %}
-	{% if entity.location %}
-	
-	{% ifnotequal style_group "dumb" %}
-    	<div class="backgrounded-image" style="background-image:url('{% map_url entity.location %}'); height:{{ map_height }}px">
-    		{% include "places/map_elements.html" %}
-    	</div>
-    {% else %}
-        <img src="{% map_url entity.location %}" alt="Map"><br />
-        {% include "places/map_elements.html" %}
-    {% endifnotequal %}
-    
-	<ul class="link-list">
-	    <li class="round-bottom"><a href="{% url places:entity-nearby-list entity.identifier_scheme entity.identifier_value %}" rel="nofollow">Find things near here</a></li>
-	</ul>
-	{% else %}
-	    <div class="note"><div class="bubble">
-	        We do not yet have a location for this {{ entity.entity_type.verbose_name }}.
-	    </div></div>
-	{% endif %}
-</div>
-
+{% include "places/metadata/ldb.html" %}
+{% include "places/metadata/real_time_information.html" %}
 {% include "places/metadata/oxpoints.html" %}
 {% include "places/metadata/osm.html" %}
+
+{% if entity.location %}
+<div class="section">
+  <div class="header">
+    <h2>Map</h2>
+  </div>
+
+  {% ifnotequal style_group "dumb" %}
+    <div class="backgrounded-image" style="background-image:url('{% map_url entity.location %}'); height:{{ map_height }}px">
+      {% include "places/map_elements.html" %}
+    </div>
+  {% else %}
+    <img src="{% map_url entity.location %}" alt="Map"><br />
+    {% include "places/map_elements.html" %}
+  {% endifnotequal %}
+    
+  <ul class="link-list">
+    <li class="round-bottom"><a href="{% url places:entity-nearby-list entity.identifier_scheme entity.identifier_value %}" rel="nofollow">Find things near here</a></li>
+  </ul>
+</div>
+{% endif %}
 
 {% endblock %}
