--- a/molly/molly/apps/places/templates/places/metadata/real_time_information.html
+++ b/molly/molly/apps/places/templates/places/metadata/real_time_information.html
@@ -1,43 +1,44 @@
-{% if entity.metadata.real_time_information %}
+{% load molly_utils %}{% if entity.metadata.real_time_information %}
 
-  <h2>Real-time departure information - {% now "G:i:s "%}</h2>
-
-  {% if entity.metadata.real_time_information.services %}
-<div class="pad-5">
-<table class="real-time-information">
-    <thead style="display:none;">
-        <tr>
-            <th>Service</th>
-            <th>Destination</th>
-            <th>Expected</th>
-        </tr>
+<div class="section">
+  <div class="header">
+    <h2>Bus departures - {% now "G:i:s "%}</h2>
+  </div>
+  
+  {% if entity.metadata.real_time_information.pip_info %}
+    <ul class="content-list no-round-bottom">
+      <li>{{ entity.metadata.real_time_information.pip_info|sanitize_html }}</li>
+    </ul>
+  {% endif %}
+  
+  <table class="content">
+    <thead>
+      <tr>
+        <th>Service</th>
+        <th>Destination</th>
+        <th>Expected</th>
+      </tr>
     </thead>
     <tbody id="bus_times">
-    {% for service in entity.metadata.real_time_information.services %}
+      {% for service in entity.metadata.real_time_information.services %}
         <tr>
-            <td rowspan="2" style="font-size:200%; text-align:center;">{{ service.service }}</td>
-            <td>{{ service.destination }}</td>
-            <td>{{ service.next }}</td>
+          <td rowspan="2" style="font-size:200%; text-align:center;">{{ service.service }}</td>
+          <td>{{ service.destination }}</td>
+          <td>{{ service.next }}</td>
         </tr>
         <tr class="notopborder">
-            <td colspan="2"><small>Next: {% if service.following %}{{ service.following|join:", " }}{% else %}<em>No further info</em>{% endif %}</small></td>
+          <td colspan="2"><small>Next: {% if service.following %}{{ service.following|join:", " }}{% else %}<em>No further info</em>{% endif %}</small></td>
         </tr>
-    {% endfor %}
+      {% empty %}
+        <tr>
+          <td colspan="3">
+            There is currently no information about buses due at this stop.
+          </td>
+        </tr>
+      {% endfor %}
     </tbody>
-</table>
+  </table>
+  
 </div>
-
-  {% else %}
-<div class="note"><div class="bubble pad-10">
-    {% if entity.metadata.real_time_information.pip_info %}
-      {{ entity.metadata.real_time_information.pip_info }}
-    {% else %}
-      Sorry, there is currently no bus time information for this stop.
-    {% endif %}
-</div></div>
-  {% endif %}
-
-{% else %}
-  <h2>Map</h2>
 
 {% endif %}
