--- a/molly/molly/apps/contact/templates/contact/result_list.html
+++ b/molly/molly/apps/contact/templates/contact/result_list.html
@@ -1,6 +1,11 @@
 {% extends "contact/base.html" %}{% load portal_misc %}
 
-{% block title %}m.ox | Contact search{% if query %}: {{ query }}{% endif %}{% endblock %}
+{% block extrahead %}{{ block.super }}
+<script type="text/javascript">
+var queryString = '{{ query_string|escapejs }}';
+var pageNumber = {{ page.number }};
+</script>
+{% endblock %}
 
 {% block content %}
 
@@ -26,27 +31,25 @@
 
   {% if results.count %}
   {% ifnotequal 1 page_count %}
-  <div class="note">
+  <div class="contact-pagination-controls">
     Pages:
     {% for page_number in results.page_range %}
-    <a href="?page={{ page_number }}&amp;medium={{ form.cleaned_data.medium }}&amp;query={{ form.cleaned_data.query|urlencode }}" style="padding:0 7px 0 0;">{{ page_number }}</a>
+    <a href="?page={{ page_number }}&amp;medium={{ form.cleaned_data.medium }}&amp;query={{ form.cleaned_data.query|urlencode }}">{{ page_number }}</a>
     {% endfor %}
   </div>
   {% endifnotequal %}
 
-  <ul class="link-list" id="people">
+  <ul class="link-list" id="contact-people">
     {% for person in page.object_list %}
-      <li class="contact-person{% if forloop.last %} round-bottom{% endif %}">
         {% include "contact/result.html" %}
-      </li>
     {% endfor %}
   </ul>
 
   {% ifnotequal 1 page_count %}
-  <div class="note">
+  <div class="contact-pagination-controls contact-pagination-controls-bottom">
     Pages:
     {% for page_number in results.page_range %}
-    <a href="?page={{ page_number }}&amp;medium={{ form.cleaned_data.medium }}&amp;query={{ form.cleaned_data.query|urlencode }}" style="padding:0 7px 0 0;">{{ page_number }}</a>
+    <a href="?page={{ page_number }}&amp;medium={{ form.cleaned_data.medium }}&amp;query={{ form.cleaned_data.query|urlencode }}">{{ page_number }}</a>
     {% endfor %}
   </div>
   {% endifnotequal %}
