--- a/molly/molly/apps/contact/templates/contact/result_list.html
+++ b/molly/molly/apps/contact/templates/contact/result_list.html
@@ -9,25 +9,35 @@ var pageNumber = {{ page.number }};
 
 {% block content %}
 
-{% include "contact/search_form.html" %}
-
 {% if form.is_valid %}
 <div class="section">
-  <h2>Results</h2>
+  <div class="header first">
+    <h2>Search</h2>
+  </div>
+  
+  <form class="content" method="get" action="{% url contact:result_list %}">
+    <p>
+      {{ form.query }}
+    </p>
+    <p>
+{% for medium in medium_choices %}
+      <button type="submit" name="medium" value="{{ medium.0 }}">{{ medium.1|capfirst }}</button>
+{% endfor %}
+    </p>
+  </form>
   {% if message %}
-  <div class="note"><div class="bubble pad-10">
-    {{ message }}
-  </div></div>
+    <div class="section notice">
+      {{ message }}
+    </div>
   {% endif %}
 
   {% if page %}
-  <div class="note"><div class="bubble pad-10">
+  <div class="content">
     {% if results.num_pages|gte:4 %}
     Your search returned {{ results.count }} item{{ results.count|pluralize }}. Try adding an initial to get more specific results.
     {% else %}
     Your search returned {{ results.count }} item{{ results.count|pluralize }}.
     {% endif %}
-  </div></div>
 
   {% if results.count %}
   {% ifnotequal 1 page_count %}
@@ -38,15 +48,18 @@ var pageNumber = {{ page.number }};
     {% endfor %}
   </div>
   {% endifnotequal %}
+  {% endif %}
+    </div>
+  {% if results.count %}
 
-  <ul class="link-list" id="contact-people">
+  <ul class="link-list{% ifequal 1 page_count %} last{% endifequal %}" id="contact-people">
     {% for person in page.object_list %}
         {% include "contact/result.html" %}
     {% endfor %}
   </ul>
 
   {% ifnotequal 1 page_count %}
-  <div class="contact-pagination-controls contact-pagination-controls-bottom">
+  <div class="content last contact-pagination-controls contact-pagination-controls-bottom">
     Pages:
     {% for page_number in results.page_range %}
     <a href="?page={{ page_number }}&amp;medium={{ form.cleaned_data.medium }}&amp;query={{ form.cleaned_data.query|urlencode }}">{{ page_number }}</a>
